--- a/main.css
+++ b/main.css
@@ -1,15 +1,51 @@
+/************** BG image ***************/
 .header {
   min-height: 100vh;
-  background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(0, 0, 0, 0.6)),
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url("img/B1.jpg") center/cover no-repeat;
   color: #fff;
 }
+.header1 {
+  min-height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("img/B2.jpg") center/cover no-repeat;
+  color: #fff;
+}
+/************** end ***************/
+
+/************** scrolldown ***************/
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+/************** end ***************/
+
 .text-head {
   color: #000;
 }
 
-.imgg{
+.imgg {
   height: 400px;
   width: 800px;
   border-radius: 100px;
+}
+.imgg1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 400px;
+  border-radius: 10px;
 }
